fixing home page on mobile

--- a/src/components/Home/index.scss
+++ b/src/components/Home/index.scss
@@ -120,6 +120,6 @@
 @media (max-width: 768px) {
 
   .text-zone {
-    max-width: fit-content
+    max-width: 750px;
   }
 }
